??-??-????: 2.1.0
	fix: no longer stops syslogging on HUP signals
	fix: OSX event watcher no longer misses moves into and out of the watch tree
	fix: not refinding a relative path to the config file in case of HUP.
	change: Lsyncd now remembers the absolute path of its config file during HUPs

25-08-2011: 2.0.5
	fix: Lsyncd will now terminate if it inotify watching exceeds
		its preset limit.
	fix: rsync error exit code 12 now results in retries.
	fix: Lsyncd 2.0.5 should now compile better on a bit elder
		GNU/Linux versions.
	fix: examples are now installed in the configured document directory.
	fix: partial transfers during startup are considered ok. Lsyncd will
		rework the specified files anyway.
	change: Layer 1 interface init() now receives an "Init" event instead
		of an inlet.
	change: builtin Lua code is now loaded via a c-array.
		Now more portable and correct memory flags are set.
	change: Lsyncd will now bail on unknown error codes.
	enhancement: settings.maxProcesses can now be set as a global limit
		of childprocesses
	enhancement: Lsyncd will refuse to start when any startup rsync
		does not work cleanly and returns "again" unless settings.insist or
		--insist is specified, then Lsyncd will keep retrying until it works.
	enhancement: option "rsyncBinary" determines which rsync Lsyncd calls.
		 Default is "/usr/bin/rsync"
	enhancement: fsevents ("inotify for OSX") fixed for Snowleopard.
		and is available to configure by default.
	enhancement: settings.inotifyMode: the actualy Modification event
		Lsyncd reacts to can now be configured. Default is to react on
		file closing in write mode.
	enhancement: readdir(path) is available to userscripts, reads the contents
		of a directory.

27-03-2011: 2.0.4
	enhancement: new setting options logident, logfacility
	fix: moving filenames with spaces through ssh
	fix: excludes containing chars % $ ( ) . [ ] + -
	fix: various typos
	change: api, settings.statusInterval instead of settings.statusIntervall
